Correcting text-align

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -106,7 +106,7 @@ body {
             text-transform: uppercase;
             width: 100%;
             color: $footer-p-color;
-            text-align-last: center;
+            text-align: center;
         }
     }
 }
